# calculator-mcp

./: Cargo.toml  README.md  justfile
src/: main.rs
