[package]
name = "calculator-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["macros", "server", "transport-io"] }
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
